packages/core/src/parser/MADR.g4
grammar MADR;

start:
	(yaml wslbs)? HEADING_PREFIX title NEWLINE wslbs (
		STATUS_MARKER status (WS OPTIONAL_MAKER)? wslbs
	)? (DECIDERS_MARKER deciders (WS OPTIONAL_MAKER)? wslbs)? (
		DATE_MARKER date (WS OPTIONAL_MAKER)? NEWLINE wslbs
	)? (
		TECHNICAL_STORY_MARKER technicalStory (WS OPTIONAL_MAKER)? wslbs
	)? (CONTEXT_AND_PROBLEM_STATEMENT wslbs)? (
		NEWLINE contextAndProblemStatement wslbs
	)? (
		DECISION_DRIVERS_HEADING (WS OPTIONAL_MAKER)? wslbs decisionDrivers wslbs
	)? (CONSIDERED_OPTIONS_HEADING wslbs consideredOptions wslbs)? (
		DECISION_OUTCOME_HEADING wslbs decisionOutcome wslbs
	)? (
		PROS_AND_CONS_OF_THE_OPTIONS_HEADING (WS OPTIONAL_MAKER)? wslbs prosAndConsOfOptions wslbs
	)? (LINKS_HEADING (WS OPTIONAL_MAKER)? wslbs links wslbs)? (
		RELEVANT_FILES_HEADING (WS OPTIONAL_MAKER)? wslbs relevantFiles wslbs
	)? EOF;

yaml: YAML_MARKER multilineText YAML_MARKER;

title: textLine;

status: textLine;

deciders: textLine;

date: textLine;

technicalStory: textLine;

contextAndProblemStatement: multilineText;

decisionDrivers: list;

consideredOptions: list;

decisionOutcome:
	wslbs chosenOptionAndExplanation (
		wslbs POSITIVE_CONSEQUENCES_HEADING (WS OPTIONAL_MAKER)? positiveConsequences
	)? (
		wslbs NEGATIVE_CONSEQUENCES_HEADING (WS OPTIONAL_MAKER)? negativeConsequences
	)?;

prosAndConsOfOptions: (optionSection wslbs)+;

optionSection:
	SUBSUBHEADING_PREFIX optionTitle NEWLINE (
		wslbs optionDescription
	)? (wslbs prolist)? (wslbs conlist)?;

chosenOptionAndExplanation: multilineText;
positiveConsequences: list;
negativeConsequences: list;

optionTitle: textLine;
optionDescription: multilineText;
prolist: (wslbs LIST_MARKER 'Good, because ' textLine)+;
conlist: (wslbs LIST_MARKER 'Bad, because ' textLine)+;

links: list wslbs;

relevantFiles: list wslbs;

list: (wslbs LIST_MARKER textLine?)+;

textLine: (any | WS)+?;

multilineText: (any | wslb)+?; // Any (possibly multi-line) text

any: (
		WORD
		| CHARACTER
		| LIST_MARKER
		| HEADING_PREFIX
		| SUBSUBSUBHEADING_PREFIX
		| YAML_MARKER
	);

wslb: ( WS | NEWLINE);
wslbs: wslb*;

/// Tokenization / Lexer rules

WORD: CHARACTER+;
CHARACTER: (~[\n\t\r\f ]);

WS: [\f\t ]; // White Space
NEWLINE: [\r]? [\n]; // Line Breaks

LIST_MARKER: NEWLINE ('* ' | '- ');
STATUS_MARKER: LIST_MARKER 'Status: ';
DATE_MARKER: LIST_MARKER 'Date: ';
DECIDERS_MARKER: LIST_MARKER 'Deciders: ';
OPTIONAL_MAKER: '<!-- optional -->';
TECHNICAL_STORY_MARKER: NEWLINE 'Technical Story: ';
YAML_MARKER: '---' NEWLINE;

HEADING_PREFIX: '# '; // Start of a Heading
SUBSUBHEADING_PREFIX:
	NEWLINE '### '; // Start of a Sub sub heading (e. g. an option section)
SUBSUBSUBHEADING_PREFIX: '###' '#'+ ' ';
// Start of a sub sub sub heading (no special meaning, should be accepted in multiline text)

// Headings
CONTEXT_AND_PROBLEM_STATEMENT:
	NEWLINE (
		'## Context And Problem Statement'
		| '## Context and Problem Statement'
		| '## Context and problem statement'
		| '## context and problem statement'
	);
DECISION_DRIVERS_HEADING:
	NEWLINE (
		'## Decision Drivers'
		| '## Decision drivers'
		| '## decision drivers'
	);
CONSIDERED_OPTIONS_HEADING:
	NEWLINE (
		'## Considered Options'
		| '## Considered options'
		| '## considered options'
	);
DECISION_OUTCOME_HEADING:
	NEWLINE (
		'## Decision Outcome'
		| '## Decision outcome'
		| '## decision outcome'
	);
POSITIVE_CONSEQUENCES_HEADING:
	NEWLINE (
		'### Positive Consequences'
		| '### Positive consequences'
		| '### positive consequences'
	);
NEGATIVE_CONSEQUENCES_HEADING:
	NEWLINE (
		'### Negative Consequences'
		| '### Negative consequences'
		| '### negative consequences'
	);
PROS_AND_CONS_OF_THE_OPTIONS_HEADING:
	NEWLINE (
		'## Pros and Cons of the Options'
		| '## Pros and cons of the options'
		| '## pros and cons of the options'
	);
LINKS_HEADING: NEWLINE ('## Links' | '## links');
RELEVANT_FILES_HEADING:
	NEWLINE (
		'## Relevant Files'
		| '## Relevant files'
		| '## relevant files'
	);
